--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Rose Day Snushi Baby 🌹❤️ - Penguin Love Story</title>
+    <title>Happy Rose Day Ashu 🌹❤️ - Penguin Love Story</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
             <img src="penguin on mission.gif" alt="Penguin on mission" class="penguin-img">
             <h2 class="mission-title">🎯 Mission Code: ROSE_DAY_001</h2>
             <p class="story-text">Agent Penguin activated.</p>
-            <p class="story-text">Objective: Make Snushi Ji smile 😌</p>
+            <p class="story-text">Objective: Make Ashu smile 😌</p>
             <button class="story-btn" onclick="nextScene(2)">Start Mission</button>
         </div>
     </div>
@@ -47,11 +47,11 @@
         </div>
     </div>
 
-    <!-- Scene 4: Calling Snushi Baby -->
+    <!-- Scene 4: Calling Ashu -->
     <div class="scene" id="scene4">
         <div class="content">
             <img src="pengwin saying come hear.webp" alt="Penguin calling" class="penguin-img">
-            <h2>Snushi Baby 👀</h2>
+            <h2>Ashu 👀</h2>
             <p class="story-text">Come here…</p>
             <p class="story-text">Penguin has tea ☕ and feelings ❤️</p>
             <button class="story-btn pop-btn" onclick="nextScene(5)">I'm here</button>
@@ -108,7 +108,7 @@
     <div class="scene" id="scene9">
         <div class="content">
             <img src="pengwin giving rose to hher.gif" alt="Penguin giving rose" class="penguin-img">
-            <h1 class="big-title">Happy Rose Day, Dr.Snushi Baby 🌹❤️</h1>
+            <h1 class="big-title">Happy Rose Day, Ashu 🌹❤️</h1>
             <p class="story-text-small">This rose comes with effort, care,</p>
             <p class="story-text-small">and a penguin who tried.</p>
             <button class="story-btn" onclick="nextScene(10)">Continue</button>
@@ -133,7 +133,7 @@
             <h1 class="celebration-title">🎉 Penguin happiness level: MAX ❤️</h1>
             <p class="secret-message">Jokes aside…</p>
             <p class="secret-message">I made this because you matter.</p>
-            <p class="secret-message final-message">Happy Rose Day, Snushi Baby 🌹❤️</p>
+            <p class="secret-message final-message">Happy Rose Day, Ashu 🌹❤️</p>
         </div>
     </div>
 
